# flexai

./: .gitignore  README.md
Ascend-Virtual-Service/: README.md
Ascend-Virtual-Service/aclrt/: client.sh
Ascend-Virtual-Service/aclserver/: aclserver_standalone  server.sh  server_2.sh  stopall.sh
Ascend-Virtual-Service/hypervisor/: clear.sh  flexnpud  flexnpud.conf  register.sh
GPU-Virtual-Service/: README.md
GPU-Virtual-Service/pod-scheduler-service/: .gitignore  README.md
GPU-Virtual-Service/xpu-pool-service/: .clang-format  .gitignore  .gitmodules  README.md
GPU-Virtual-Service/xpu-pool-service/direct/acl/: CMakeLists.txt
GPU-Virtual-Service/xpu-pool-service/direct/acl/include/: acl_resource_limiter.h  shm.h  stream_cache.h
GPU-Virtual-Service/xpu-pool-service/direct/acl/src/tools/: monitor.cpp  monitor.h
GPU-Virtual-Service/xpu-pool-service/direct/cuda/: CMakeLists.txt
GPU-Virtual-Service/xpu-pool-service/direct/cuda/include/: cuda_resource_limiter.h  nvml_compat.h  pid_manager.h
GPU-Virtual-Service/xpu-pool-service/direct/cuda/src/: gpu_core_limiter.cpp  gpu_manager.cpp
GPU-Virtual-Service/xpu-pool-service/direct/cuda/src/tools/: monitor.cpp  monitor.h
xpu-pool-service/: .gitignore  CMakeLists.txt
xpu-pool-service/GPU-device-plugin/: go.mod
xpu-pool-service/GPU-device-plugin/cmd/: main.go
xpu-pool-service/GPU-device-plugin/pkg/api/runtime/service/: api.pb.go  api_grpc.pb.go  service_impl.go
xpu-pool-service/GPU-device-plugin/pkg/gonvml/: cgo_helpers_static.go  nvml_const.go  nvml_const_static.go  nvml_device.go  nvml_event.go  nvml_lib.go  nvml_wrap.go
xpu-pool-service/GPU-device-plugin/pkg/lock/: nodelock.go
xpu-pool-service/GPU-device-plugin/pkg/log/: file.go  logger.go
xpu-pool-service/GPU-device-plugin/pkg/plugin/: cache.go  expected.vgpu-ids.config  plugin.go
xpu-pool-service/GPU-device-plugin/pkg/plugin/types/: types.go
xpu-pool-service/GPU-device-plugin/pkg/plugin/util/: util.go
xpu-pool-service/ci/: cms_signature.sh  dependency.xml  hwp7s_signature.sh
xpu-pool-service/ci/at/: at_deploy.yml
xpu-pool-service/ci/cmc/: openSource_x86.xml
xpu-pool-service/ci/xpu_pool/xpu_docker_build/exporter/: Dockerfile
xpu-pool-service/ci/xpu_pool/xpu_docker_build/gpu-device-plugin/: Dockerfile
xpu-pool-service/client_update/: acl-client-update.sh  cuda-client-update.sh
xpu-pool-service/direct/: CMakeLists.txt
xpu-pool-service/direct/acl/include/: npu_core_limiter.h  npu_manager.h  npu_timeslice_scheduler.h
xpu-pool-service/direct/acl/src/: acl_resource_limiter.cpp  npu_core_limiter.cpp  npu_manager.cpp  npu_timeslice_scheduler.cpp  shm.cpp
xpu-pool-service/direct/acl/src/hooks/: runtime_hooks.cpp
xpu-pool-service/direct/common/include/: common.h  file_lock.h  hook_helper.h  log.h  register.h
xpu-pool-service/direct/common/include/tools/: monitor_base.h
xpu-pool-service/direct/common/src/: file_lock.cpp  log.cpp
xpu-pool-service/direct/common/src/tools/: monitor_base.cpp
xpu-pool-service/direct/cuda/include/: gpu_core_limiter.h  gpu_manager.h
xpu-pool-service/direct/cuda/src/: cuda_resource_limiter.cpp  pid_manager.cpp
xpu-pool-service/direct/cuda/src/hooks/: cuda_hooks.cpp
xpu-pool-service/docker-build/client-update/: Dockerfile
xpu-pool-service/docker-build/gpu-device-update/: Dockerfile
xpu-pool-service/install/: npu_env_init.sh  uninstall.sh
xpu-pool-service/install/helm/gpupool/: Chart.yaml  values.yaml
xpu-pool-service/install/helm/gpupool/templates/: NOTES.txt  gpu-client-update-daemonset.yaml  gpu-device-plugin-configmap.yaml  role-binding.yaml  role.yaml  service-account.yaml  xpu-servicemonitor.yaml
xpu-pool-service/xpu-exporter/: Makefile  go.mod
xpu-pool-service/xpu-exporter/collector/: collector_service.go
xpu-pool-service/xpu-exporter/collector/gpuservice/: gpu_collector.go  gpu_collector_service.go
xpu-pool-service/xpu-exporter/common/cache/: lrucache.go
xpu-pool-service/xpu-exporter/common/client/: client_test.go
xpu-pool-service/xpu-exporter/common/limiter/: limit_handler.go  limit_handler_test.go
xpu-pool-service/xpu-exporter/common/service/: api.pb.go  api_grpc.pb.go
xpu-pool-service/xpu-exporter/server/: prometheus_test.go
(+100 files in other folders)
